Fix artifact display on Mobile :)

--- a/src/assets/css/alexandria.css
+++ b/src/assets/css/alexandria.css
@@ -111,76 +111,103 @@
 	display: block;
 	margin: auto;
 }
+.img-container > canvas {
+  max-width: 100%;
+}
 @media (min-width: 1300px) { 
 	.img-container{
 		height: 100%;
 	}
 	.content-container {
-		height: 720px;
+		height: 73vh;
 		width: 100%;
 	}
   .content-container .content {
     width: 100%; 
-    height: 720px; 
+    height: 73vh; 
   }
   	.paywall-container {
 		width: 100%; 
-		height: 720px; 
-		margin-top: -720px; 
+		height: 73vh; 
+		margin-top: -73vh; 
 	}
 }
 @media (max-width: 1300px) and (min-width: 900px) { 
 	.img-container{
-		max-height: 100%;
+		max-height: 50vh;
 	}
+  .img-container > canvas {
+    max-height: 50vh;
+  }
 	.content-container {
 		height: auto;
-		min-height: 500px;
-		width: 100%;
-	}
-	.content-container .content {
-    	height: auto;
-    	min-height: 500px;
-    	width: 100%;
-	}
-	.paywall-container {
-		height: auto;
-		min-height: 500px;
-		margin-top: -500px; 
-		width: 100%;
-	}
-}
-@media (max-width: 900px) and (min-width: 550px) { 
-	.content-container {
-		height: auto;
-		min-height: 300px;
-		width: 100%;
-	}
-	.content-container .content {
-    	height: auto;
-    	min-height: 300px;
-    	width: 100%;
-	}
-	.paywall-container {
-		height: auto;
-		min-height: 300px;
-		margin-top: -300px; 
-		width: 100%;
-	}
-}
-@media (max-width: 550px) and (min-width: 200px) { 
-	.content-container {
-		height: auto;
+    max-height: 50vh;
 		min-height: 200px;
 		width: 100%;
 	}
 	.content-container .content {
     	height: auto;
+      max-height: 50vh;
     	min-height: 200px;
     	width: 100%;
 	}
 	.paywall-container {
 		height: auto;
+    max-height: 50vh;
+		min-height: 200px;
+		margin-top: -500px; 
+		width: 100%;
+	}
+}
+@media (max-width: 900px) and (min-width: 550px) { 
+  .img-container{
+    max-height: 50vh;
+  }
+  .img-container > canvas {
+    max-height: 50vh;
+  }
+	.content-container {
+		height: auto;
+    max-height: 50vh;
+		min-height: 200px;
+		width: 100%;
+	}
+	.content-container .content {
+    	height: auto;
+      max-height: 50vh;
+    	min-height: 200px;
+    	width: 100%;
+	}
+	.paywall-container {
+		height: auto;
+    max-height: 50vh;
+		min-height: 200px;
+		margin-top: -200px; 
+		width: 100%;
+	}
+}
+@media (max-width: 550px) and (min-width: 200px) { 
+  .img-container{
+    max-height: 50vh;
+  }
+  .img-container > canvas {
+    max-height: 50vh;
+  }
+	.content-container {
+		height: auto;
+    max-height: 50vh;
+		min-height: 200px;
+		width: 100%;
+	}
+	.content-container .content {
+    	height: auto;
+    max-height: 50vh;
+    	min-height: 200px;
+    	width: 100%;
+	}
+	.paywall-container {
+		height: auto;
+    max-height: 50vh;
 		min-height: 200px;
 		margin-top: -200px; 
 		width: 100%;
